# auction-etl

./: .env.example  .gitignore  README.md  alembic.ini  debug.html  debug_ebay.html  docker-compose.yml  ebay.html  import  page1.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0428279b6f87_allow_page_history.py  4c4e55331d0d_initial_warehouse_schema.py  be7b9855a5dc_add_uniqueness_constraints.py  c4aba410158b_add_crawl_job.py
app/: collector_review.py  collector_review.py.backup.20260723-221753  collector_review.py.backup.20260723-224106
auction_etl/: __main__.py
auction_etl/browser/: defaults.py  fetch.py  fetch.py.bak  login.py  manager.py  manager.py.bak  profiles.py  session.py.bak
auction_etl/classifiers/: __init__.py  media.py
auction_etl/cli/: audit.py  browser.py  crawl.py  doctor.py  export.py  ingest.py  main.py  normalize.py  parse.py  rebuild.py  report.py  review.py  stats.py  sync.py
auction_etl/config/: settings.py
auction_etl/crawlers/: __init__.py  buyee.py  ebay.py  http.py
auction_etl/database/: bootstrap.py  health.py  session.py
auction_etl/discovery/: ebay.py
auction_etl/models/: __init__.py  crawl.py  raw.py  staging.py  (+2 more)
config/: ebay_sources.json
scripts/: audit_collector_db.py  audit_collector_db.py.backup.20260723-211047  bootstrap_ebay_profile.py  collector_features.py  collector_features.py.backup.20260723-190145  collector_features.py.backup.20260723-202637  collector_features.py.backup.20260723-203703  crawl_ebay_chrome_cdp.py  crawl_ebay_sources.py  enrich_buyee_details.py  probe_buyee_details.py  reclassify_collector.py  reclassify_collector.py.backup.20260723-215304  run_audit.sh  run_collector_ui.sh  run_reports.sh  run_reports.sh.backup.20260723-160819
(+18 files in other folders)
