[project]
name = "auction-etl"
version = "0.1.0"
description = "Terminal-first ETL pipeline for collectible auction data."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.16",
    "rich>=14",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "psycopg[binary]>=3.2",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=6",
    "jinja2>=3.1",
    "loguru>=0.7",
    "playwright>=1.54",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.60.0",
    "pandas>=3.0.5",
]

[project.scripts]
auction = "auction_etl.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auction_etl"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]
